# hm64-decomp

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  Makefile.common  Makefile.jp  README.md  decomp.yaml  permuter_settings.toml  runbook.md  spec  symbol_addrs.txt  undefined_funcs.txt  undefined_funcs_auto.txt  undefined_syms.txt  undefined_syms_auto.txt
tools/modding/sprite_editor/: .gitignore  Cargo.toml  README.html  README.md  build.rs  clippy.toml  rust-toolchain.toml  rustfmt.toml
tools/modding/sprite_editor/data/: animation_labels.csv
tools/modding/sprite_editor/src/: lib.rs  main.rs
tools/modding/sprite_editor/src/cmd/: animation_cmds.rs  font_palette_cmds.rs  font_pixel_cmds.rs  history.rs  mod.rs  palette_cmds.rs  texture_cmds.rs
tools/modding/sprite_editor/src/export/: animation_data_json.rs  animation_export.rs  avatar_inc_c_export.rs  font_bin_export.rs  font_ci2_export.rs  font_pal_export.rs  inc_c_export.rs  macros_h_export.rs  manifest_export.rs  mod.rs  palette_export.rs  scaffold.rs  sprite_bin.rs  texture_export.rs
tools/modding/sprite_editor/src/extract/: addresses.rs  animation.rs  font.rs  labels.rs  mod.rs  palette.rs  rom.rs  script.rs  sprite.rs  texture.rs
tools/modding/sprite_editor/tests/: animation_delete_save.rs  animation_editor_roundtrip.rs  avatar_lifecycle.rs  font_bin_matches_python.rs  font_extract_matches_python.rs  font_pixel_command_undo.rs  roundtrip_assets.rs
tools/modding/sprite_editor/ui/: animations_panel.slint  color_picker.slint  confirm_dialog.slint  delete_sprite_dialog.slint  extraction_progress.slint  font_glyphs_panel.slint  font_palettes_panel.slint  main_window.slint  new_folder_dialog.slint  new_font_wizard.slint  new_sprite_wizard.slint  palettes_panel.slint  save_progress.slint  script_panel.slint  textures_panel.slint  theme.slint  toast.slint
(+1383 files in other folders)
