[package]
name = "hm64-sprite-editor"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.90"
description = "Standalone asset editor for Harvest Moon 64 sprites, palettes, and animation scripts."
license = "GPL-3.0-or-later"
publish = false

[lib]
name = "hm64_sprite_editor"
path = "src/lib.rs"

[[bin]]
name = "hm64-sprite-editor"
path = "src/main.rs"

[dependencies]
slint = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
bitflags = "2.6"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
rfd = "0.15"
regex = "1.10"
once_cell = "1.20"
png = "0.17"

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Optimize all third-party crates even in dev builds. Slint's renderer, image
# decoders, and serde do enough heavy lifting per frame that an unoptimized
# debug build feels laggy on resize / scale changes — especially with the
# 60 Hz animation timer sharing the main thread. Our own code stays at
# `opt-level = 0` so iterative recompiles remain fast.
[profile.dev.package."*"]
opt-level = 2

[package.metadata.bundle]
name = "HM64 Sprite Editor"
identifier = "io.github.hm64-decomp.sprite_editor"
icon = []
version = "0.1.0-dev"
copyright = "Copyright (c) 2026 HM64 decomp contributors"
category = "public.app-category.developer-tools"
short_description = "HM64 sprite asset editor"
long_description = """
Standalone desktop application for authoring Harvest Moon 64 sprite
assets: palettes, textures, animation scripts, and paired macro headers.
"""
